Added load Planning Poker Dialog